--- a/src/components/Loading.css
+++ b/src/components/Loading.css
@@ -1,23 +1,65 @@
-.line:nth-last-child(1) {
-    animation: loadingC 0.6s 0.1s linear infinite;
+  .ball {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    background: white;
+    position: relative;
+    box-shadow: -20px 0 rgba(0, 0, 0, 0.1) inset;
+    animation: roll 1.5s ease-in-out infinite;
+    background: linear-gradient(
+      to bottom,
+      #e83e35 0%,
+      #e83e35 50.5%,
+      #ffffff 50.51%,
+      #ffffff 100%
+    );
   }
-.line:nth-last-child(2) {
-    animation: loadingC 0.6s 0.2s linear infinite;
-  }
- .line:nth-last-child(3) {
-    animation: loadingC 0.6s 0.3s linear infinite;
-  }
-
   
-  @keyframes loadingC {
-    0% {
-      transform: translate(0, 0);
+  .ball:after {
+    content: "";
+    position: absolute;
+    top: calc(50px - 3px);
+    left: 0;
+    width: 100px;
+    height: 6px;
+    background: #3f3f3f;
+  }
+  
+  .ball:before {
+    content: "";
+    position: absolute;
+    top: 33px;
+    left: 33px;
+    width: 27px;
+    height: 27px;
+    border: solid 6px #3f3f3f;
+    border-radius: 50%;
+    background: white;
+    z-index: 1;
+    box-shadow: 0 0 15px -2px #c62828 inset;
+    animation: button 3s ease infinite;
+  }
+  
+  @-webkit-keyframes roll {
+    from {
+      transform: rotate(0);
     }
-    50% {
-      transform: translate(0, 15px);
+    80%,
+    to {
+      transform: rotate(720deg);
     }
-    100% {
-      transform: translate(0, 0);
+  }
+  
+  @-webkit-keyframes button {
+    from,
+    50%,
+    to {
+      box-shadow: 0 0 15px -2px #c62828 inset;
+    }
+  
+    25%,
+    75% {
+      box-shadow: 0 0 10px -2px #1300ea inset;
     }
   }
   
